--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,6 @@
-name: gas_dist_modelling
+name: methane_dispersion_modelling
 channels:
   - defaults
-  - anaconda
   - conda-forge
   - https://repo.anaconda.com/pkgs/main
   - https://repo.anaconda.com/pkgs/r
@@ -12,9 +11,9 @@ dependencies:
   - brotli=1.1.0=hcfcfb64_1
   - brotli-bin=1.1.0=hcfcfb64_1
   - bzip2=1.0.8=hcfcfb64_5
-  - ca-certificates=2024.9.24=haa95532_0
+  - ca-certificates=2025.1.31=h56e8100_0
   - cartopy=0.24.0=py312h72972c8_0
-  - certifi=2024.8.30=pyhd8ed1ab_0
+  - certifi=2024.12.14=pyhd8ed1ab_0
   - cftime=1.6.3=py312ha90f08f_0
   - colorama=0.4.6=pyhd8ed1ab_0
   - comm=0.2.2=pyhd8ed1ab_0
@@ -78,6 +77,7 @@ dependencies:
   - libxml2=2.12.5=hc3477c8_0
   - libzip=1.10.1=h1d365fa_3
   - libzlib=1.2.13=hcfcfb64_5
+  - llvm-openmp=19.1.7=h30eaf37_0
   - llvmlite=0.43.0=py312hf2fb9eb_0
   - lz4-c=1.9.4=hcfcfb64_0
   - m2w64-gcc-libgfortran=5.3.0=6
@@ -96,7 +96,7 @@ dependencies:
   - numba=0.60.0=py312hcccf92d_0
   - numpy=1.26.4=py312h8753938_0
   - openjpeg=2.5.2=h3d672ee_0
-  - openssl=3.4.0=h2466b09_0
+  - openssl=3.4.0=ha4e3fda_1
   - packaging=24.0=pyhd8ed1ab_0
   - pandas=2.2.3=py312h72972c8_1
   - parso=0.8.3=pyhd8ed1ab_0
@@ -115,6 +115,7 @@ dependencies:
   - pthreads-win32=2.9.1=hfa6e2cd_3
   - pure_eval=0.2.2=pyhd8ed1ab_0
   - pygments=2.17.2=pyhd8ed1ab_0
+  - pykdtree=1.4.1=py312h1a27103_0
   - pyparsing=3.1.2=pyhd8ed1ab_0
   - pyproj=3.6.1=py312hc725b1e_5
   - pyqt=5.15.9=py312he09f080_5
@@ -163,4 +164,10 @@ dependencies:
   - zipp=3.17.0=pyhd8ed1ab_0
   - zlib=1.2.13=hcfcfb64_5
   - zstd=1.5.5=h12be248_0
-prefix: C:\Users\kdo000\.conda\envs\gas_dist_modelling
+  - pip:
+      - lazy-loader==0.4
+      - networkx==3.4.2
+      - opencv-python==4.11.0.86
+      - scikit-image==0.25.2
+      - tifffile==2025.2.18
+prefix: C:\Users\kdo000\.conda\envs\methane_dispersion_modelling
